--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "recharts": "^2.15.3",
     "streamifier": "^0.1.1",
     "swr": "^2.3.3"
   },
