--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^2.6.1",
     "dom-to-image": "^2.6.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
@@ -25,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "streamifier": "^0.1.1",
     "swr": "^2.3.3"
