--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "katex": "^0.16.22",
     "mongoose": "^8.15.1",
