--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@matejmazur/react-katex": "^3.1.3",
     "bcryptjs": "^3.0.2",
+    "better-react-mathjax": "^2.3.0",
     "cloudinary": "^2.6.1",
     "dom-to-image": "^2.6.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
+    "he": "^1.2.0",
+    "html-react-parser": "^5.2.5",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "katex": "^0.16.22",
+    "mathjax": "^3.2.2",
     "mongoose": "^8.15.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
