--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@matejmazur/react-katex": "^3.1.3",
     "bcryptjs": "^3.0.2",
     "better-react-mathjax": "^2.3.0",
@@ -16,6 +17,7 @@
     "dom-to-image": "^2.6.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
+    "gsap": "^3.13.0",
     "he": "^1.2.0",
     "html-react-parser": "^5.2.5",
     "html2canvas": "^1.4.1",
