--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@matejmazur/react-katex": "^3.1.3",
+    "@react-pdf/renderer": "^4.3.0",
     "bcryptjs": "^3.0.2",
     "better-react-mathjax": "^2.3.0",
     "cloudinary": "^2.6.1",
@@ -30,6 +31,8 @@
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "pdfmake": "^0.2.20",
+    "puppeteer": "^24.11.2",
     "r": "^0.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
