--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@matejmazur/react-katex": "^3.1.3",
     "@react-pdf/renderer": "^4.3.0",
+    "@splinetool/react-spline": "^4.0.0",
     "bcryptjs": "^3.0.2",
     "better-react-mathjax": "^2.3.0",
     "cloudinary": "^2.6.1",
