--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.2",
     "@matejmazur/react-katex": "^3.1.3",
     "@react-pdf/renderer": "^4.3.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@splinetool/react-spline": "^4.0.0",
     "bcryptjs": "^3.0.2",
     "better-react-mathjax": "^2.3.0",
@@ -33,12 +34,13 @@
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "pdfmake": "^0.2.20",
-    "puppeteer": "^24.11.2",
+    "puppeteer": "^24.15.0",
     "r": "^0.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "streamifier": "^0.1.1",
